--- a/client/src/Components/CardContainer/CardContainer.css
+++ b/client/src/Components/CardContainer/CardContainer.css
@@ -1,13 +1,11 @@
 #card-container {
     background-image: url("../../assets/dot-grid.jpg");
-}
-#card-container-noflex {
-    display: flex;
+    /* display: flex;
     flex-wrap: nowrap;
+    justify-content: space-around; */
+}
+#card-container-body {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
-/* #card-container-flex {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-} */
