took out google fonts.

--- a/client/src/Components/CardContainer/CardContainer.css
+++ b/client/src/Components/CardContainer/CardContainer.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
 }
 #card-container-header {
-    font-family: 'Quicksand', sans-serif;
+    font-family: sans-serif;
     font-size: 30px;
     /* font-variant: small-caps; */
 }
