--- a/client/src/Components/StudentCard/StudentCard.css
+++ b/client/src/Components/StudentCard/StudentCard.css
@@ -6,7 +6,7 @@
     font-size: 22px;
 }
 .student-name {
-    font-family: 'Red Hat Text', sans-serif;
+    font-family: sans-serif;
     font-size: 24px;
 }
 .blue-stu {
