added a lot of styling

--- a/client/src/Components/Button/Button.css
+++ b/client/src/Components/Button/Button.css
@@ -1,6 +1,7 @@
 .moxie-buttons {
     background: #002020bd;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
+    margin-top: 10px !important;
     /* color: #ffde59; */
 }
