fixed styling bug that made image span off the side of the viewport

--- a/client/src/Components/CardContainer/CardContainer.css
+++ b/client/src/Components/CardContainer/CardContainer.css
@@ -16,5 +16,14 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between; 
-    /* font-variant: small-caps; */
+    background: rgba(235, 220, 15, 0.404);
+    padding: 10px 0 0 10px;
+    /* width: 40%; */
+    border: 1px solid rgb(0, 0, 5);
+    border-radius: 10px;
+    /* font-size: 24px;
+    margin: 10px 15px 0 0;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;  */
 }
