--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -1,9 +1,5 @@
-#moxie-logo {
-/* background-image: url("../../assets/moxie-logo.png"); */
-height: 200px;
-width: 100%;
-background-repeat: no-repeat;
-display: flex;
-justify-content: center;
-align-items: center;
-}
+
+img {
+    max-width: 100%;
+    height: auto;
+  }
