--- a/client/src/Components/StudentListItem/StudentListItem.css
+++ b/client/src/Components/StudentListItem/StudentListItem.css
@@ -4,6 +4,36 @@
         align-items: center;
         border-bottom: 4px double rgb(190, 195, 190);
         /* margin: 10px 0; */
-        background-color: rgb(245, 250, 247);
+        background-color: rgb(250, 248, 245);
         height: 90px;
+} 
+.student-info-blue {
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 4px double rgb(48, 4, 245);
+        /* margin: 10px 0; */
+        background-color: rgb(250, 248, 245);
+        height: 90px;
+}
+.student-info-green {
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 4px double rgb(39, 128, 39);
+        /* margin: 10px 0; */
+        background-color: rgb(250, 248, 245);
+        height: 90px;
+}
+.student-info-red {
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 4px double rgb(160, 33, 33);
+        /* margin: 10px 0; */
+        background-color: rgb(250, 248, 245);
+        height: 90px;
+}
+.list-item-btn{
+    background: rgba(0, 0, 0, 0.418);
 }
