--- a/client/src/Components/ChartContainer/ChartContainer.css
+++ b/client/src/Components/ChartContainer/ChartContainer.css
@@ -6,13 +6,12 @@
 }
 #chart-container-header {
     font-size: 24px;
-    margin: 10px 15px 0 0;
+    margin: 10px 10px 0 0;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center; 
-    background: rgba(231, 231, 231, 0.404);
-    padding: 10px 0 0 10px;
-    width: 40%;
-    border: 1px solid rgb(0, 0, 5);
-    border-radius: 10px;
+    justify-content: space-between; 
+    background: rgba(255, 254, 254, 0.486);
+    padding: 7px 5px 5px 5px;
+    border: 1px solid rgb(182, 178, 178);
+    border-radius: 5px;
 }
